tests/sksl/errors/Ossfuzz26759.sksl
void main() { int i; i-- - 0*half3(i); }
